# gcab-rs

./: Cargo.toml  Gir.toml
gcab-sys/: Cargo.toml  Gir.toml  build.rs
gcab-sys/src/: lib.rs
src/: lib.rs
